增加了Dockerfile文件实现打包镜像

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM java:8
 MAINTAINER muyi317 <296280063@qq.com>
 
 # 添加参数
-ARG JAR_FILE=patientsmanager-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE
 
 # 添加 Spring Boot 包
-ADD target/${JAR_FILE} app.jar
+ADD target/patientsmanager-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8090
 
